@@ -97,6 +97,19 @@ tasks.register("day4", JavaExec) {
     ]
 }
 
+tasks.register("day5", JavaExec) {
+    group "_jar"
+    description "run tests from given day"
+    dependsOn jar
+    classpath = sourceSets.main.runtimeClasspath
+    mainClass = "-jar"
+    jvmArgs = ["-Xlog:gc:gc.log", "-XX:+PrintFlagsFinal", "-XX:ReservedCodeCacheSize=1024m", "-Xms4g", "-Xmx4g"]
+    args = [
+            "${buildDir}/advent.jar",
+            "run", "--day", "day5"
+    ]
+}
+
 tasks.test {
     useJUnitPlatform()
 }
